Fix bio social alignment

--- a/blog/src/style.css
+++ b/blog/src/style.css
@@ -305,7 +305,6 @@ a:focus {
 .bio-social {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
 }
 
 .blog-post header h1 {
